[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautobot-contract-models"
version = "2026.5.12"
description = "First-class Contract, Invoice, and ServiceProvider models for Nautobot."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ryan Malloy", email = "ryan@supported.systems" }]
keywords = ["nautobot", "nautobot-app", "nautobot-plugin", "contracts", "invoices", "renewals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
]
dependencies = [
    "nautobot>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
docs = [
    # Material for MkDocs theme + plugins, matching the nautobot-app docs style.
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.27,<1",
    "mkdocs-glightbox>=0.5,<1",
    "markdown-version-annotations>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/rsp2k/nautobot-contract-models"
Documentation = "https://nautobot-contract-models.readthedocs.io/"
Issues = "https://github.com/rsp2k/nautobot-contract-models/issues"
Source = "https://github.com/rsp2k/nautobot-contract-models"

[tool.hatch.build.targets.wheel]
packages = ["src/nautobot_contract_models"]

[tool.hatch.build.targets.sdist]
exclude = [
    "CLAUDE.md",
    "INITIAL_PROMPT.md",
    "PLAN.md",
    ".env",
    ".env.local",
    ".mcp.json",
    "/local/",
    ".pytest_cache/",
    ".ruff_cache/",
    "dist/",
    "build/",
    "development/",
    "tests/",
    # Source markdown for the docs site lives at the repo root and gets
    # rendered into src/.../static/.../docs/ at build time. Ship the
    # rendered HTML (which lives under src/) but not the source. Leading
    # slash anchors the match to the repo root — without it, hatchling's
    # gitignore-style matching would also exclude the nested
    # src/.../static/.../docs/ rendered HTML the wheel needs.
    "/docs/",
    "/mkdocs.yml",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
# Both test trees: host-pytest (./tests/) and Django integration (src/.../tests/).
# Test method names are already self-documenting; D102 docstrings would just repeat them.
"**/tests/*" = ["D"]
# Migrations: Django auto-generates schema migrations with long lines and
# unsorted imports we shouldn't fight. The rules don't fire on hand-written
# data migrations that are already clean (e.g. 0002_register_statuses), so
# blanket-exempting all migrations is safe.
"src/nautobot_contract_models/migrations/*" = ["D", "E501", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"
